# modify-repos

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  README.md  pyproject.toml
.github/workflows/: lock.yaml  pre-commit.yaml  publish.yaml  tests.yaml
docs/: conf.py  index.md  script.md  utils.md
docs/providers/: base.md  git.md  github.md
src/modify_repos/: __main__.py  cli.py  cmd.py  models.py  utils.py  wrap.py
src/modify_repos/repo/: base.py  git.py  github.py
src/modify_repos/script/: base.py  github.py
